force-app/main/default/objects/TrackIT__Location_Inspection_Transactions__c/TrackIT__Location_Inspection_Transactions__c.object-meta.xml
<CustomObject>
    <description>Location Repair and Inspection Transaction object for buildings and locations for  area safety inspections and repairs.</description>
    <label>Location Repair And Inspect Transaction</label>
    <nameField>
        <label>Record ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Repair And Inspect Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>