force-app/main/default/objects/TrackIT__Location_Inspection_Transactions__c/fields/TrackIT__Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Date_Time__c</fullName>
    <description>Date and Time on which location safety inspections were completed</description>
    <label>Date Time</label>
    <type>DateTime</type>
</CustomField>