force-app/main/default/objects/TrackIT__Location_Inspection_Transactions__c/fields/TrackIT__Inspected_Items__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Inspected_Items__c</fullName>
    <label>Inspected Items</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Location_Inspection_Items</valueSetName>
    </valueSet>
</CustomField>