force-app/main/default/objects/TrackIT__Location_Inspection_Transactions__c/fields/TrackIT__Inspection_Type__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Inspection_Type__c</fullName>
    <label>Inspection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Inspection_Type</valueSetName>
    </valueSet>
</CustomField>