force-app/main/default/objects/TrackIT__Location_Inspection_Transactions__c/fields/TrackIT__Location__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Location__c</fullName>
    <label>Location</label>
    <referenceTo>TrackIT__Location__c</referenceTo>
    <relationshipName>Location_Inspections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>