force-app/main/default/objects/TrackIT__Location_Inspection_Transactions__c/fields/TrackIT__Repaired_Items__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Repaired_Items__c</fullName>
    <label>Repaired Items</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Location_Repair_Items</valueSetName>
    </valueSet>
</CustomField>