force-app/main/default/objects/TrackIT__Location_Inspection_Transactions__c/listViews/TrackIT__All.listView-meta.xml
<ListView>
    <fullName>TrackIT__All</fullName>
    <columns>NAME</columns>
    <columns>TrackIT__Location__c</columns>
    <columns>TrackIT__Date_Time__c</columns>
    <columns>TrackIT__Type__c</columns>
    <columns>TrackIT__Inspection_Result__c</columns>
    <columns>TrackIT__Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>